# openai-compatible-bridge

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  PROJECT.md  README.md  app.py  cost_tracking.py  docker-compose.yml  pyproject.toml  vertex.py
.codex/specs/cost-tracking/: design.md  milestones.md  requirements.html  requirements.md
Docs/: RAGFlow-0.25.6용-Vertex-AI-임베딩-OpenAI-호환-래퍼-설계서.md  Vertex-AI-임베딩-래퍼-설계.md
openai_compatible_bridge/: __init__.py  main.py
openai_compatible_bridge/core/: __init__.py  cost_tracking.py
openai_compatible_bridge/providers/: ollama.py  vertex.py
scripts/swiftbar/: ollama-cost.1m.py
specs/dynamic-ollama-normalization/: design.md  requirements.html  requirements.md
specs/ollama-per-request-reasoning/: design.md  requirements.html  requirements.md
specs/ollama-structured-output-repair/: design.md  requirements.html  requirements.md
specs/openai-compatible-bridge/: design.md  milestones.md  requirements.html  requirements.md
tests/: conftest.py  test_bridge_package.py  test_cost_tracking.py  test_ollama_chat.py  test_project_identity.py  test_swiftbar_ollama_cost.py  test_wrapper.py
